# Connect4-Game-Rust-MongoDB-Nightly

./: README.md
cliapp/: Cargo.toml
cliapp/src/: main.rs
cliapp/src/connect4/: connect4.rs  connect4_cpu.rs  mod.rs
cliapp/src/toototto/: mod.rs  toototto.rs  toototto_cpu.rs
frontend/: Cargo.toml  index.html  styles.css
frontend/src/: Home.rs  cell.rs  cell_toot.rs  connect4.rs  connect4_computer.rs  connect_4.rs  game_history.rs  howToPlayConnect4.rs  howToPlayTOOT.rs  main.rs  mod.rs  scoreboard.rs  toot_otto.rs  toot_otto_computer.rs
frontend/src/connect4/: connect4_cpu.rs
frontend/src/toototto/: toototto_cpu.rs
server/: Cargo.toml
server/src/: doc!  main.rs
src/: main.rs  test.txt
