[package]
name = "project3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = {version = "1.2.1", default-features = false, features = ["sync"]}
bson = "1.2.0"
tokio = "1"
chrono = "0.4" # Used for setting DateTimes
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"